stylesheets/stylesheet.css
/* ... */
/* BUTTONS media queries */
@media screen and (min-width: 64em) {
  .btn {
    padding: 0.75rem 1rem; }
}

@media screen and (min-width: 42em) and (max-width: 64em) {
  .btn {
    padding: 0.6rem 0.9rem;
    font-size: 0.9rem;
  }
}

@media screen and (max-width: 42em) {
  .btn {
    display: block;
    width: 100%;
    padding: 0.75rem;
    font-size: 0.9rem;
    max-width: 15rem;
    margin: 0 auto;
  }
  .btn + .btn {
    margin: 1rem auto 0;
  }
}



/* === MAIN CONTENT === */
.main-content {
  font-weight: 300;
  font-size: 1rem;
}
.main-content :first-child {
  margin-top: 0; }
.main-content img {
  max-width: 100%;
}
.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
  /*margin-top: 2rem;*/
  margin-bottom: 1rem;
  font-weight: 300;
  color: #159957; }
.main-content p {
  margin-bottom: 1em; }
.main-content code {
  padding: 2px 4px;
  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
  font-size: 0.9rem;
  color: #383e41;
  background-color: #f3f6fa;
  border-radius: 0.3rem; }
.main-content pre {
  padding: 0.8rem;
  margin-top: 0;
  margin-bottom: 1rem;
  font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
  color: #567482;
  word-wrap: normal;
  background-color: #f3f6fa;
  border: solid 1px #dce6f0;
  border-radius: 0.3rem; }
  .main-content pre > code {
    padding: 0;
    margin: 0;
    font-size: 0.9rem;
    color: #567482;
    word-break: normal;
    white-space: pre;
    background: transparent;
    border: 0; }
.main-content .highlight {
  margin-bottom: 1rem; }
  .main-content .highlight pre {
    margin-bottom: 0;
    word-break: normal; }
.main-content .highlight pre, .main-content pre {
  padding: 0.8rem;
  overflow: auto;
  font-size: 0.9rem;
  line-height: 1.45;
  border-radius: 0.3rem; }
.main-content pre code, .main-content pre tt {
  display: inline;
  max-width: initial;
  padding: 0;
  margin: 0;
  overflow: initial;
  line-height: inherit;
  word-wrap: normal;
  background-color: transparent;
  border: 0; }
  .main-content pre code:before, .main-content pre code:after, .main-content pre tt:before, .main-content pre tt:after {
    content: normal; }
.main-content ul, .main-content ol {
  margin-top: 0; }
.main-content blockquote {
  padding: 0 1rem;
  margin-left: 0;
  color: #819198;
  border-left: 0.3rem solid #dce6f0; }
  .main-content blockquote > :first-child {
    margin-top: 0; }
  .main-content blockquote > :last-child {
    margin-bottom: 0; }
.main-content table {
  display: block;
  width: 100%;
  overflow: auto;
  word-break: normal;
  word-break: keep-all; }
  .main-content table th {
    font-weight: bold; }
  .main-content table th, .main-content table td {
    padding: 0.5rem 1rem;
    border: 1px solid #e9ebec; }
.main-content dl {
  padding: 0; }
  .main-content dl dt {
    padding: 0;
    margin-top: 1rem;
    font-size: 1rem;
    font-weight: bold; }
  .main-content dl dd {
    padding: 0;
    margin-bottom: 1rem; }
.main-content hr {
  height: 2px;
  padding: 0;
  margin: 1rem 0;
  background-color: #eff0f1;
  border: 0; }

/* MAIN CONTENT media queries */
@media screen and (min-width: 64em) {
  .main-content {
    max-width: 64rem;
    padding: 2rem 6rem;
    margin: 0 auto;
  }
}

@media screen and (min-width: 42em) and (max-width: 64em) {
  .main-content {
    padding: 2rem 4rem;
  }
  .main-content ul {
    padding-left: 20px;
  }
}

@media screen and (max-width: 42em) {
  .main-content {
    padding: 2rem 1rem;
    font-size: 1rem;
  }
  .main-content ul {
    padding-left: 20px;
  }
}



/* === MAIN CONTENT FLEX GRID === */
.row {
  width: 100%;
  padding: 3rem 0 1rem;
  border-bottom: solid 1px #eff0f1;
  display: flex;
  display: -webkit-flex;
  flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  justify-content: space-between;
  -webkit-justify-content: space-between;
}
.row:first-of-type {
  padding-top: 1.5rem;
}
.row > .column {
  flex: 1 0 0;
  -webkit-flex: 1 0 0;
  padding: 0 1rem;
  margin-bottom: 1rem;
}
.row div:first-of-type {
  padding-left: 0;
}
.row div:last-of-type {
  padding-right: 0;
}
.column.tutorials a:hover {
  border: none;
  opacity: 0.7;
}
.column > .video,
.column > .img_slider {
  /*margin-right: 1rem;*/
}

/* MAIN CONTENT FLEX GRID media queries */
/*@media screen and (max-width: 42em) {*/
@media screen and (max-width: 768px) {
  .row {
    flex-flow: column;
    -webkit-flex-flow: column;
    justify-content: center;
    -webkit-justify-content: center;
  }
  .row > .column {
    padding: 0 1rem!important;
    flex: 0;
    -webkit-flex: 0;
  }
  .column > .video,
  .column > .img_slider {
    margin-right: 0;
  }
  .column.tutorials {
    margin: 0 auto 1rem;
    max-width: 400px;
  }
}



/* === FOOTER === */
.site-footer {
  padding-top: 2rem;
  margin-top: 2rem;
  border-top: solid 1px #eff0f1;
}

.site-footer-owner {
  display: block;
  font-weight: bold;
  margin-bottom: 1rem;
}

.site-footer-credits {
  color: #819198;
  font-size: .8rem;
  float: left;
  max-width: 50%;
  margin: 1rem 0;
}

.site-footer img {
  max-width: 280px;
  float: right;
}

/* FOOTER media queries */
@media screen and (min-width: 64em) {
  .site-footer {
    font-size: 1rem;
  }
}

@media screen and (min-width: 42em) and (max-width: 64em) {
  .site-footer {
    font-size: 1rem;
  }
}

@media screen and (max-width: 42em) {
  .site-footer {
    font-size: 0.9rem;
    text-align: center;
  }
  .site-footer-credits {
    clear: both;
    float: none;
    text-align: center;
    max-width: 100%;
  }
  .site-footer img {
    clear: both;
    float: none;
  }
}



/* === EMBED === */
.embed-container {
  position: relative;
  padding-bottom: 56.25%!important;
  height: 0;
  overflow: hidden;
  max-width: 100%;
}

.embed-container iframe,
.embed-container object,
.embed-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}



/* === BLOG === */
p.atom {
  font-style: italic;
  float: right;
}
/* ... */

